Beginning of info rendering, add ProbeData submodule, glasses render tweaks

--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,7 @@ artifacts {
 dependencies {
 	deploy 'org.apache.maven.wagon:wagon-ssh:2.10'
 	
+	compile project(':ProbeDataProviderAPI')
 	compile fileTree(dir: 'libs', include: '*.jar')
 	
 	shadow 'io.github.elytra:concrete:0.0.6'
