--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,3 @@
-version=1.10.2-0.1.5
-mappings=snapshot_20160921
-forge=1.10.2-12.18.1.2093
+version=1.7.10-0.1.5
+mappings=stable_12
+forge=1.7.10-10.13.4.1614-1.7.10
