--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ProbeDataProviderAPI"]
 	path = ProbeDataProviderAPI
-	url = git@github.com:elytra/ProbeDataProviderAPI.git
+	url = https://github.com/elytra/ProbeDataProviderAPI.git
