Let's try NOT A DEV BUILD

--- a/build.gradle
+++ b/build.gradle
@@ -60,10 +60,6 @@ repositories {
 		name = 'waila'
 		url = 'http://mobiusstrip.eu/maven'
 	}
-	maven {
-		name = 'codechicken'
-		url = 'http://chickenbones.net/maven/'
-	}
 	jcenter()
 	ivy {
 		artifactPattern "http://unascribed.com/jars/[organisation]/[module].[ext]"
@@ -78,7 +74,7 @@ configurations {
 
 dependencies {
 	deploy 'org.apache.maven.wagon:wagon-ssh:2.10'
-	compile 'mcp.mobius.waila:Waila:1.5.9b_dev2_1.7.10'
+	compile 'mcp.mobius.waila:Waila:1.5.10_1.7.10'
 }
 
 jar {
