--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,27 @@
+/*
+ * The MIT License (MIT)
+ *
+ * Copyright (c) 2017 William Thompson (unascribed)
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy of
+ * this software and associated documentation files (the "Software"), to deal in
+ * the Software without restriction, including without limitation the rights to
+ * use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
+ * of the Software, and to permit persons to whom the Software is furnished to do
+ * so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all
+ * copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ * SOFTWARE.
+ */
+
 buildscript {
 	repositories {
 		mavenCentral()
@@ -26,11 +50,30 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 apply from: 'project.gradle'
 
-println("Elytra Project Skeleton v1.0.1")
+if (project.ext.useElytraVersionFormat) {
+	def branch;
+	if (System.env.BRANCH_NAME) {
+		// Jenkins support
+		branch = System.env.BRANCH_NAME;
+		branch = branch.substring(branch.lastIndexOf('/')+1);
+	} else {
+		branch = 'git rev-parse --abbrev-ref HEAD'.execute().in.text.trim();
+	}
+	if (branch == "HEAD") {
+		branch = 'git rev-parse --short HEAD'.execute().in.text.trim();
+	}
+	def commits = 'git rev-list --count HEAD'.execute().in.text.trim();
+	def dirty = !'git diff-index HEAD'.execute().in.text.trim().isEmpty();
+	version = branch+'-'+project.ext.version+'.'+commits+(dirty ? '-dirty' : '');
+} else {
+	version = project.ext.version;
+}
+
+println("Elytra Project Skeleton v1.1.0")
 println("https://github.com/elytra/skel")
 println()
 println("Project Name: "+project.ext.projectName)
-println("Version: "+project.ext.version)
+println("Version: "+version)
 println()
 println("Package: "+project.ext.package)
 println()
@@ -42,9 +85,8 @@ println("Mappings: "+project.ext.mappings)
 
 project.ext.priv = parseConfig(file('private.properties'))
 
-group = "com.elytradev"
+group = project.ext.group
 archivesBaseName = project.ext.projectName
-version = project.ext.version
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
