--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,27 @@
+/*
+ * The MIT License (MIT)
+ *
+ * Copyright (c) 2017 Una Thompson (unascribed)
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy of
+ * this software and associated documentation files (the "Software"), to deal in
+ * the Software without restriction, including without limitation the rights to
+ * use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
+ * of the Software, and to permit persons to whom the Software is furnished to do
+ * so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all
+ * copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ * SOFTWARE.
+ */
+
 buildscript {
 	repositories {
 		mavenCentral()
@@ -10,108 +34,142 @@ buildscript {
 			name = "sonatype"
 			url = "https://oss.sonatype.org/content/repositories/snapshots/"
 		}
+		maven {
+			url "https://plugins.gradle.org/m2/"
+		}
 	}
 	dependencies {
-		classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
-		classpath 'me.tatarka:gradle-retrolambda:3.2.0'
+		classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+		classpath 'net.sf.proguard:proguard-gradle:5.3.3'
+		classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+		classpath 'gradle.plugin.net.minecrell:licenser:0.3'
 	}
-}
-
-plugins {
-    id 'com.github.johnrengelman.shadow' version '1.2.3'
-    id 'net.minecrell.licenser' version '0.3'
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
-apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'maven'
 
-ext.configFile = file('build.properties')
+apply from: 'project.gradle'
 
-ext.config = parseConfig(configFile)
-ext.priv = parseConfig(file('private.properties'))
+if (project.ext.useElytraVersionFormat) {
+	def branch;
+	if (System.env.BRANCH_NAME) {
+		// Jenkins support
+		branch = System.env.BRANCH_NAME;
+		branch = branch.substring(branch.lastIndexOf('/')+1);
+	} else {
+		branch = 'git rev-parse --abbrev-ref HEAD'.execute().in.text.trim();
+	}
+	if (branch == "HEAD") {
+		branch = 'git rev-parse --short HEAD'.execute().in.text.trim();
+	}
+	def commits = 'git rev-list --count HEAD'.execute().in.text.trim();
+	def dirty = !'git diff-index HEAD'.execute().in.text.trim().isEmpty();
+	version = branch+'-'+project.ext.version+'.'+commits+(dirty ? '-dirty' : '');
+} else {
+	version = project.ext.version;
+}
 
-group = "com.elytradev"
-archivesBaseName = "FruitPhone"
-version = config.version
+println("Elytra Project Skeleton v1.1.0")
+println("https://github.com/elytra/skel")
+println()
+println("Project Name: "+project.ext.projectName)
+println("Version: "+version)
+println()
+println("Package: "+project.ext.package)
+println()
+if (!project.ext.concreteModules.isEmpty()) {
+	println("Concrete Version: "+project.ext.concreteVersion)
+}
+println("Forge Version: "+project.ext.forge)
+println("Mappings: "+project.ext.mappings)
+
+project.ext.priv = parseConfig(file('private.properties'))
+
+group = project.ext.group
+archivesBaseName = project.ext.projectName
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-retrolambda {
-	javaVersion JavaVersion.VERSION_1_6
-	defaultMethods true
-}
-
 repositories {
-	maven {
-		name = 'sonatype-nexus'
-		url = 'https://oss.sonatype.org/content/repositories/public/'
-	}
+	jcenter()
+	mavenCentral()
 	maven {
 		name = 'elytra'
 		url = 'http://repo.elytradev.com/'
 	}
-	jcenter()
-	ivy {
-		artifactPattern "http://unascribed.com/jars/[organisation]/[module].[ext]"
+}
+
+if (project.ext.enforceLicenseHeaders) {
+	apply plugin: 'net.minecrell.licenser'
+}
+
+if (!project.ext.concreteModules.isEmpty()) {
+	apply plugin: 'com.github.johnrengelman.shadow'
+
+	jar {
+		classifier = 'slim'
 	}
-	maven {
-		name = 'jei'
-		url = "http://dvs1.progwml6.com/files/maven"
+
+	shadowJar {
+		classifier = ''
+		relocate 'com.elytradev.concrete', project.ext.package+'.repackage.com.elytradev.concrete'
+		configurations = [project.configurations.shadow]
 	}
-	maven {
-		name = 'hwyla'
-		url "http://tehnut.info/maven"
+
+	reobf {
+		shadowJar { mappingType = 'SEARGE' }
+	}
+
+	tasks.reobfJar.doLast {
+		file('build/libs/'+archivesBaseName+'-'+version+'-slim.jar').delete()
+	}
+
+	tasks.build.dependsOn reobfShadowJar
+
+	artifacts {
+		archives shadowJar
+	}
+
+	dependencies {
+		for (String module : project.ext.concreteModules) {
+			shadow 'com.elytradev:concrete:'+project.ext.concreteVersion+':'+module
+			compile 'com.elytradev:concrete:'+project.ext.concreteVersion+':'+module
+		}
 	}
 }
 
-configurations {
-	deploy
+if (priv != null) {
+	apply plugin: 'maven'
+
+	configurations {
+		deploy
+	}
+
+	dependencies {
+		deploy 'org.apache.maven.wagon:wagon-ssh:2.10'
+	}
+
+	uploadArchives {
+		repositories.mavenDeployer {
+			configuration = configurations.deploy
+			pom.artifactId = project.ext.projectName.toLowerCase()
+			repository(url: "sftp://"+priv.sftpHost+priv.sftpPath) {
+				authentication(userName: priv.sftpUser, privateKey: file(priv.sftpKey))
+			}
+		}
+	}
 }
 
-jar {
-	classifier = 'slim'
-}
 
-shadowJar {
-	classifier = ''
-	relocate 'com.elytradev.concrete', 'com.elytradev.fruitphone.repackage.com.elytradev.concrete'
-	configurations = [project.configurations.shadow]
-}
-
-reobf {
-	shadowJar { mappingType = 'SEARGE' }
-}
-
-tasks.build.dependsOn reobfShadowJar
-
-artifacts {
-	archives shadowJar
-}
-
-dependencies {
-	deploy 'org.apache.maven.wagon:wagon-ssh:2.10'
-	
-	compile project(':ProbeDataProviderAPI')
-	
-	shadow 'com.elytradev:concrete:0.1.0'
-	compile 'com.elytradev:concrete:0.1.0'
-	
-	compile 'mezz.jei:jei_1.11.2:4.2.6.235:api'
-	runtime 'mezz.jei:jei_1.11.2:4.2.6.235'
-	
-	compile 'mcp.mobius.waila:Hwyla:1.8.10-B23_1.11'
-	runtime 'mcp.mobius.waila:Hwyla:1.8.10-B23_1.11'
-}
 
 minecraft {
-	version = config.forge
-	mappings = config.mappings
+	version = project.ext.forge
+	mappings = project.ext.mappings
 
 	runDir = "minecraft"
 
-	replaceIn 'src/main/java/com/elytradev/fruitphone/FruitPhone.java'
+	replaceIn 'src/main/java/'+project.ext.package.replace('.', '/')+'/'+project.ext.projectName+'.java'
 	replace '@VERSION@', project.version
 }
 
@@ -137,22 +195,10 @@ processResources {
 }
 
 def parseConfig(File config) {
-	if (!config.exists()) return new Properties()
+	if (!config.exists()) return null
 	config.withReader {
 		def prop = new Properties()
 		prop.load(it)
 		return (new ConfigSlurper().parse(prop))
-	}
-}
-
-if (file("private.properties").exists()) {
-	uploadArchives {
-		repositories.mavenDeployer {
-			configuration = configurations.deploy
-			pom.artifactId = 'fruitphone'
-			repository(url: "sftp://"+priv.sftpHost+priv.sftpPath) {
-				authentication(userName: priv.sftpUser, privateKey: file(priv.sftpKey))
-			}
-		}
 	}
 }
