--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,24 @@
 /*
  * The MIT License (MIT)
- *
+ * 
  * Copyright (c) 2017 Una Thompson (unascribed)
- *
- * Permission is hereby granted, free of charge, to any person obtaining a copy of
- * this software and associated documentation files (the "Software"), to deal in
+ * 
+ * Permission is hereby granted, free of charge, to any person obtaining a copy of 
+ * this software and associated documentation files (the "Software"), to deal in 
  * the Software without restriction, including without limitation the rights to
- * use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
- * of the Software, and to permit persons to whom the Software is furnished to do
+ * use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies 
+ * of the Software, and to permit persons to whom the Software is furnished to do 
  * so, subject to the following conditions:
- *
- * The above copyright notice and this permission notice shall be included in all
+ * 
+ * The above copyright notice and this permission notice shall be included in all 
  * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ * 
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, 
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE 
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER 
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, 
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE 
  * SOFTWARE.
  */
 
@@ -27,11 +27,9 @@ buildscript {
 		mavenCentral()
 		jcenter()
 		maven {
-			name = "forge"
 			url = "http://files.minecraftforge.net/maven"
 		}
 		maven {
-			name = "sonatype"
 			url = "https://oss.sonatype.org/content/repositories/snapshots/"
 		}
 		maven {
@@ -40,15 +38,23 @@ buildscript {
 	}
 	dependencies {
 		classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
-		classpath 'net.sf.proguard:proguard-gradle:5.3.3'
-		classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+		classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.0'
 		classpath 'gradle.plugin.net.minecrell:licenser:0.3'
+		classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.3'
 	}
 }
 
+ext.early = true
+apply from: 'project.gradle'
+
+if (project.ext.language == 'kotlin') {
+	apply plugin: 'kotlin'
+} else if (project.ext.language == 'scala') {
+	apply plugin: 'scala'
+}
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-apply from: 'project.gradle'
+project.ext.package = project.ext.group+'.'+project.ext.projectName.toLowerCase()
 
 if (project.ext.useElytraVersionFormat) {
 	def branch;
@@ -68,9 +74,9 @@ if (project.ext.useElytraVersionFormat) {
 } else {
 	version = project.ext.version;
 }
-
-println("Elytra Project Skeleton v1.1.0")
-println("https://github.com/elytra/skel")
+println()
+println("Elytra Project Skeleton v1.1.3")
+println("https://github.com/elytra/Skeleton")
 println()
 println("Project Name: "+project.ext.projectName)
 println("Version: "+version)
@@ -80,8 +86,16 @@ println()
 if (!project.ext.concreteModules.isEmpty()) {
 	println("Concrete Version: "+project.ext.concreteVersion)
 }
+if (project.ext.coremod && project.ext.miniVersion) {
+	println("Mini Version: "+project.ext.miniVersion);
+}
 println("Forge Version: "+project.ext.forge)
 println("Mappings: "+project.ext.mappings)
+println()
+println("Language: "+project.ext.language.charAt(0).toUpperCase()+project.ext.language.substring(1))
+println()
+
+project.ext.priv = parseConfig(file('private.properties'))
 
 group = project.ext.group
 archivesBaseName = project.ext.projectName
@@ -93,8 +107,12 @@ repositories {
 	jcenter()
 	mavenCentral()
 	maven {
-		name = 'elytra'
-		url = 'http://repo.elytradev.com/'
+		url 'https://repo.elytradev.com/'
+	}
+	if (project.ext.language == 'kotlin') {
+		maven {
+			url 'http://maven.shadowfacts.net/'
+		}
 	}
 }
 
@@ -102,7 +120,9 @@ if (project.ext.enforceLicenseHeaders) {
 	apply plugin: 'net.minecrell.licenser'
 }
 
-if (!project.ext.concreteModules.isEmpty()) {
+def needsShadow = !project.ext.concreteModules.isEmpty() || project.ext.miniVersion
+
+if (needsShadow) {
 	apply plugin: 'com.github.johnrengelman.shadow'
 
 	jar {
@@ -112,6 +132,7 @@ if (!project.ext.concreteModules.isEmpty()) {
 	shadowJar {
 		classifier = ''
 		relocate 'com.elytradev.concrete', project.ext.package+'.repackage.com.elytradev.concrete'
+		relocate 'com.elytradev.mini', project.ext.package+'.asm.repackage.com.elytradev.mini'
 		configurations = [project.configurations.shadow]
 	}
 
@@ -131,9 +152,22 @@ if (!project.ext.concreteModules.isEmpty()) {
 
 	dependencies {
 		for (String module : project.ext.concreteModules) {
-			shadow 'com.elytradev:concrete:'+project.ext.concreteVersion+':'+module
-			compile 'com.elytradev:concrete:'+project.ext.concreteVersion+':'+module
+			shadow 'com.elytradev.concrete:concrete-'+module+':'+project.ext.concreteVersion
+			deobfCompile 'com.elytradev.concrete:concrete-'+module+':'+project.ext.concreteVersion
 		}
+		if (project.ext.miniVersion) {
+			shadow 'com.elytradev:mini:'+project.ext.miniVersion
+			compile 'com.elytradev:mini:'+project.ext.miniVersion
+		}
+	}
+}
+
+ext.early = false
+apply from: 'project.gradle'
+
+if (project.ext.language == 'kotlin') {
+	dependencies {
+		compile 'net.shadowfacts:Forgelin:1.5.1'
 	}
 }
 
@@ -151,6 +185,8 @@ if (file('private.gradle').exists()) {
 	apply from: 'private.gradle'
 }
 
+
+
 minecraft {
 	version = project.ext.forge
 	mappings = project.ext.mappings
@@ -159,6 +195,25 @@ minecraft {
 
 	replaceIn 'src/main/java/'+project.ext.package.replace('.', '/')+'/'+project.ext.projectName+'.java'
 	replace '@VERSION@', project.version
+
+	if (project.ext.coremod) {
+		coreMod = project.ext.coremod
+	}
+}
+
+if (project.ext.coremod) {
+	jar {
+		manifest {
+			attributes (
+				'FMLCorePlugin': project.ext.coremod,
+				'FMLCorePluginContainsFMLMod': true
+			)
+		}
+	}
+}
+
+if (project.ext.language == 'kotlin') {
+	sourceSets.main.java.srcDirs += 'src/main/kotlin'
 }
 
 processResources {
@@ -182,3 +237,11 @@ processResources {
 	}
 }
 
+def parseConfig(File config) {
+	if (!config.exists()) return null
+	config.withReader {
+		def prop = new Properties()
+		prop.load(it)
+		return (new ConfigSlurper().parse(prop))
+	}
+}
