--- a/project.gradle
+++ b/project.gradle
@@ -7,7 +7,7 @@ ext {
 	useElytraVersionFormat = true
 	version = '2'
 
-	concreteVersion = '0.3.4-SNAPSHOT'
+	concreteVersion = '0.4.43'
 	concreteModules = [ 'common', 'network', 'reflect' ]
 
 	coremod = null
